[package]
name = "aries_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
bincode = "1.3"  # For efficient serialization
log = "0.4"
env_logger = "0.9"
parking_lot = "0.12" # For Mutexes and RwLocks
thiserror = "1.0" # For custom errors
uuid = { version = "1.4", features = ["v4"] }